<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragLanguage">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/language"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txtLanguage"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="18sp"
                android:autoSizeStepGranularity="4sp"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/hitandrun_regular"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="30sp" />

        <Button
                android:text="@string/english"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnEnglish"
                android:background="#00FFFFFF"
                android:textColor="@color/yellow"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"

                android:layout_weight="1"
                android:padding="0dp"
                android:fontFamily="@font/hitandrun_regular"
                android:layout_margin="2dp"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="24sp" />

        <Button
                android:text="@string/french"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnFrench"
                android:background="#00FFFFFF"
                android:textColor="@color/yellow"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"
                android:layout_weight="1"
                android:padding="0dp"
                android:fontFamily="@font/hitandrun_regular"
                android:layout_margin="2dp"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="24sp" />
    </LinearLayout>
</FrameLayout>