<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragMenu">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/new_order"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnNewOrder"
                android:background="#00FFFFFF"
                android:textColor="@color/green"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"
                android:layout_weight="1"
                android:padding="0dp"
                android:fontFamily="@font/hitandrun_regular"
                android:layout_margin="1dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="24sp" />

        <Button
                android:text="@string/all_orders"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnAllOrders"
                android:background="#00FFFFFF"
                android:textColor="@color/yellow"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"
                android:layout_weight="1"
                android:padding="0dp"
                android:fontFamily="@font/hitandrun_regular"
                android:layout_margin="1dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="24sp" />

        <Button
                android:text="@string/change_language"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnChangeLanguage"
                android:background="#00FFFFFF"
                android:textColor="@color/orange"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"
                android:layout_weight="1"
                android:padding="0dp"
                android:fontFamily="@font/hitandrun_regular"
                android:layout_margin="1dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:maxLines="1"
                android:textSize="24sp" />

    </LinearLayout>
</FrameLayout>