<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragOrder"
        android:background="@color/white">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

            <TextView
                    android:text="@string/pick_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCart"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/green"
                    android:padding="10dp"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textSize="30sp"
                    android:maxLines="1" />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sizesInfo"
                    android:textAlignment="center"
                    android:layout_gravity="center">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:text="@string/toppings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPickSize"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/green"
                    android:padding="10dp"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textSize="30sp"
                    android:maxLines="1" />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toppingsInfo"
                    android:textAlignment="center"
                    android:layout_gravity="center" />

            <Button
                    android:text="@string/add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnAddToCart"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    app:cornerRadius="30px"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:singleLine="false"
                    android:layout_marginHorizontal="30dp"
                    android:textSize="30sp"
                    android:maxLines="2" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>