<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragCart"
        android:background="@color/white">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:padding="30dp">

            <TextView
                    android:text="@string/cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCart"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="24sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/green"
                    android:fontFamily="@font/hitandrun_regular"
                    android:includeFontPadding="false"
                    android:textSize="30sp"
                    android:maxLines="1" />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cartInfo"
                    android:textAlignment="center"
                    android:layout_gravity="center">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotal"
                        android:gravity="center|left"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMaxTextSize="30sp"
                        android:autoSizeMinTextSize="24sp"
                        android:autoSizeStepGranularity="4sp"
                        android:textColor="@color/green"
                        android:fontFamily="@font/hitandrun_regular"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="30sp" />

                <TextView
                        android:text="Value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotalValue"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:fontFamily="@font/hitandrun_regular"
                        android:textColor="@color/green"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMaxTextSize="30sp"
                        android:autoSizeMinTextSize="24sp"
                        android:autoSizeStepGranularity="4sp"
                        android:padding="10dp"
                        android:textSize="30sp"
                        android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:text="@string/back"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCartBack"
                        android:layout_weight="1"
                        android:fontFamily="@font/hitandrun_regular"
                        android:textColor="@color/red"
                        android:background="#00FFFFFF"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMaxTextSize="24sp"
                        android:autoSizeMinTextSize="12sp"
                        android:autoSizeStepGranularity="4sp"
                        android:gravity="left"
                        android:textSize="24sp"
                        android:maxLines="1" />

                <Button
                        android:text="@string/checkout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCheckout"
                        android:layout_weight="1"
                        android:fontFamily="@font/hitandrun_regular"
                        android:textColor="@color/orange"
                        android:background="#00FFFFFF"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMaxTextSize="24sp"
                        android:autoSizeMinTextSize="12sp"
                        android:autoSizeStepGranularity="4sp"
                        android:gravity="center|right"
                        android:textSize="24sp"
                        android:maxLines="1" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:paddingTop="80dp"
            android:paddingBottom="80dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:visibility="gone"
            android:id="@+id/popUpCustomerInfo"
            android:gravity="center">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_red"
                android:padding="40dp">

            <TextView
                    android:text="@string/checkout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/txtCheckout"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/orange"
                    android:padding="10dp"
                    android:fontFamily="@font/hitandrun_regular"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:textSize="30sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/txtCustomerInfo"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/yellow"
                    android:padding="10dp"
                    android:fontFamily="@font/hitandrun_regular"
                    android:layout_weight="2"
                    android:text="@string/customer_information"
                    android:textSize="24sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/txtError"
                    android:textAlignment="center"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/dmsans_regular"
                    android:layout_weight="4"
                    android:text="Error Message"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:gravity="center" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etxtName"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:background="#F3F3F3"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:gravity="center"
                    android:maxLength="50"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:includeFontPadding="false" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:id="@+id/etxtPhone"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:background="#F3F3F3"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:maxLength="100"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:inputType="number" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textWebEmailAddress|textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etxtEmail"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:background="#F3F3F3"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:gravity="center"
                    android:maxLength="100"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:includeFontPadding="false" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:id="@+id/etxtAddress"
                    android:layout_weight="2"
                    android:hint="@string/address"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:background="#F3F3F3"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:gravity="center"
                    android:maxLength="2000"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:includeFontPadding="false" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:id="@+id/etxtNotes"
                    android:layout_weight="2"
                    android:hint="@string/notes"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:background="#F3F3F3"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:gravity="center"
                    android:maxLength="300"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:includeFontPadding="false" />

            <Button
                    android:text="@string/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnConfirm"
                    android:layout_weight="2"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textColor="@color/green"
                    android:background="#00FFFFFF"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:maxLines="1"
                    android:textSize="30sp" />

            <Button
                    android:text="@string/back"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnInfoBack"
                    android:layout_weight="2"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textColor="@color/red"
                    android:background="#00FFFFFF"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:maxLines="1"
                    android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:paddingTop="80dp"
            android:paddingBottom="80dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:visibility="gone"
            android:id="@+id/popUpConfirmed"
            android:gravity="center">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_green"
                android:padding="40dp">

            <ImageView
                    android:src="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/imageView2"
                    android:layout_weight="1" />

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/txtOrderPreview"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textColor="@color/green"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:textSize="24sp" />

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/txtOrderConfirmedDescription"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/blue"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:textSize="18sp" />

            <Button
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/btnOK"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/hitandrun_regular"
                    android:textColor="@color/white"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="4sp"
                    android:backgroundTint="@color/green"
                    app:cornerRadius="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>